Fixed issues from code review regarding bad practices, extra spacing, and style requirements. Also made edits to the structure of the website to restore old behaviour when resizing windows, and removed code that is not currently in use or being worked on.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,43 +1,9 @@
-* {
-    box-sizing: border-box;
-}
-
-#welcome {
-    display: flex;
-    max-width: auto;
-    max-height: 900px;
-    min-width: 765px;
-    margin: 0px 100px 125px 100px;
-    padding: 20px;
-    border: 1px solid rgba(94, 94, 94, 0.7);
-}
-
-.textcontainer, .gallery {
-    display: flex;
-    max-height: 1920;
-    text-align: justify;
-}
-
-.RightSideTextContainer, .LeftSideTextContainer {
-    max-width: auto;
-    min-width: 400px;
-    font-size: 25px;
-}
-
-.RightSideTextContainer {
-    margin: 0px 0px 0px 25px;
-}
-
-.LeftSideTextContainer {
-    margin: 0px 25px 0px 0px;
-}
-
 .gallery {
+    align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
-    max-width: 600px;
-    max-height:600px;
+    max-width: 720px;
+    max-height:720px;
     min-width: 300px;
     min-height: 300px; 
 }
@@ -49,7 +15,49 @@
     
 }
 
-.sections h1{
-    text-align: center;
+h1 {
     font-size: 50px;
+    text-align: center;
+}
+
+.LeftSideTextContainer {
+    margin: 0px 40px 0px 0px;
+}
+
+.RightSideTextContainer {
+    margin: 0px 0px 0px 40px;
+}
+
+.sections {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    margin: 0px 100px 125px 100px;
+    max-height: 1100px;
+    max-width: auto;
+    min-width: 765px;
+    padding: 20px;
+}
+
+.sectionheader {
+    max-width: auto;
+    min-width: 965px;
+}
+
+.textcontainer {
+    font-size: 25px;
+    max-width: 720px;
+    min-width: 400px;
+    text-align: justify;
+}
+
+.textcontainer, 
+.gallery {
+    box-sizing: border-box;
+    display: flex;
+}
+
+#about,
+#welcome {
+    border: 1px solid rgba(94, 94, 94, 0.7);
 }
